# haiku-for-humans

./: Dockerfile  fly.toml  pyproject.toml
app/: bot.py  database.py  main.py  models.py  validator.py
static/: index.html  script.js  styles.css
