[project]
name = "haiku-for-humans"
version = "0.1.0"
description = "Community haiku website with Telegram bot submission"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "cmudict>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
